# smesh

./: .gitignore  BRIEF.md  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml
examples/configs/: aerial_lidar.yaml  mobile_lidar.yaml  photogrammetry.yaml  total_station.yaml
examples/configs/preview/: aerial_lidar_preview.yaml  mobile_lidar_preview.yaml  photogrammetry_preview.yaml  total_station_preview.yaml
examples/images/: readme_preview.html
examples/meshes/: demo_scene.ply  preview_scene.ply
examples/outputs/: aerial_lidar.las  mobile_lidar.las  photogrammetry.npz  total_station.npz
scripts/: make_plotly_preview.py  render_examples.py
smesh/: __init__.py
smesh/cli/: __init__.py  main.py
smesh/config/: __init__.py  schema.py
smesh/core/: attributes.py  exporter.py  intersector.py  pointcloud.py  sampler.py  scene.py  utils.py
smesh/examples/: __init__.py  synthetic.py
smesh/motion/: pose.py  trajectory.py
smesh/runtime/: builders.py
smesh/sdk/: __init__.py  run.py
smesh/sensors/: base.py  camera.py  lidar.py  noise.py  patterns.py  totalstation.py
tests/integration/: test_cli.py
tests/unit/: test_attributes.py  test_core_structs.py  test_exporters.py  test_intersectors.py  test_motion_and_patterns.py  test_sampler.py  test_sdk_run.py
