[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smesh"
version = "0.0.1"
description = "Smesh – Mesh→Point-Cloud Sensor Simulator (core skeleton)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
  { name="Smesh Authors", email="example@example.com" }
]
dependencies = [
  "numpy>=1.23",
  "laspy>=2.4",
  "PyYAML>=6.0",
  "pydantic>=2.7",
  "typer>=0.12",
  "matplotlib>=3.9",
]

[project.scripts]
smesh = "smesh.cli.main:main"
[project.optional-dependencies]
vtk = ["vtk>=9.2"]
embree = ["trimesh[ray]>=4.4"]
laz = ["lazrs>=0.5"]

[tool.setuptools.packages.find]
include = ["smesh*"]
